--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <link rel="stylesheet" href="style.css">
 
 <script>
-  
+  function getWidth() {
+    return Math.max(
+      document.body.scrollWidth,
+      document.documentElement.scrollWidth,
+      document.body.offsetWidth,
+      document.documentElement.offsetWidth,
+      document.documentElement.clientWidth
+    );
+  }
+
+  function getHeight() {
+    return Math.max(
+      document.body.scrollHeight,
+      document.documentElement.scrollHeight,
+      document.body.offsetHeight,
+      document.documentElement.offsetHeight,
+      document.documentElement.clientHeight
+    );
+  }
+
   window.onload = function() {
     const numberOfDots = 100;
     
     // derived from the scss file
-    const color_names = ["light-purple", "dull-red", "hunter-green", "pale", "carolina-blue"]
+    const color_names = ["light-purple", "dull-red", "hunter-green", "light-pink", "carolina-blue"]
 
     var fragment = document.createDocumentFragment();
     const maxDelay = 2.5;
@@ -14,14 +33,14 @@
     for (var i = 0; i < numberOfDots; i++) {
       var dot = document.createElement("div");
       var color = color_names[i % color_names.length];
-      var x = Math.floor(Math.random() * window.innerWidth);
-      var y = Math.floor(Math.random() * window.innerHeight);
+      var x = Math.floor(Math.random() * 100);
+      var y = Math.floor(Math.random() * 100);
       var reverse = Math.random() < 0.5;
 
       dot.setAttribute("class", `dot theme-${color} ${reverse ? "reverse" : ""}`);
       dot.style.animationDelay = Math.floor(Math.random() * maxDelay * (1 / precision)) / (1 / precision) + "s";
-      dot.style.left = x;
-      dot.style.top = y;
+      dot.style.left = x + "%";
+      dot.style.top = y + "%";
 
       console.log(dot);
       fragment.appendChild(dot);
