Got main card to display

--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <link rel="stylesheet" href="style.css">
 
+<div class="content">
+	<br>
+  <
+	<div class="selfie" style="width: 160px; height: 160px;">
+		<div class="selfie" style="border: 5px solid #000;">
+		</div>
+	</div>
+	<br>
+	Luke Halasy
+	<br>
+	<br>
+	<a>Resume</a><br>
+	<a href="https://linkedin.com" target="_blank">LinkedIn</a><br>
+	<a>Projects</a>
+  
+</div>
+
 <script>
-  function getWidth() {
-    return Math.max(
-      document.body.scrollWidth,
-      document.documentElement.scrollWidth,
-      document.body.offsetWidth,
-      document.documentElement.offsetWidth,
-      document.documentElement.clientWidth
-    );
-  }
-
-  function getHeight() {
-    return Math.max(
-      document.body.scrollHeight,
-      document.documentElement.scrollHeight,
-      document.body.offsetHeight,
-      document.documentElement.offsetHeight,
-      document.documentElement.clientHeight
-    );
-  }
-
   window.onload = function() {
-    const numberOfDots = 100;
+    const numberOfDots = 200;
     
     // derived from the scss file
     const color_names = ["light-purple", "dull-red", "hunter-green", "light-pink", "carolina-blue"]
