Switching to svgs, too much css pain

--- a/app/newfoundland.html
+++ b/app/newfoundland.html
@@ -1,24 +1,7 @@
 <head>
-  <title>Portfolio | Luke Halasy</title>
+  <title>Newfoundland</title>
   <link rel="stylesheet" href="css/newfoundland.css" />
 </head>
 
 <body>
-  <div class="center">
-    <div class="house_one">
-      <div class="wall"></div>
-      <div class="roof">
-        <div class="window">
-          <div class="window-roof"></div>
-          <div class="top-glass"></div>
-          <div class="bottom-glass"></div>
-        </div>
-        <div class="window">
-          <div class="window-roof"></div>
-          <div class="top-glass"></div>
-          <div class="bottom-glass"></div>
-        </div>
-      </div>
-    </div>
-  </div>
 </body>
