Got basic billboard

--- a/app/newfoundland.html
+++ b/app/newfoundland.html
@@ -4,4 +4,99 @@
 </head>
 
 <body>
+  <div class="sky-container">
+    <div class="main-content">
+      <div class="text-container">
+        Hello Visitor,
+        <br>
+        <br>
+        My name is Luke.
+        <br>
+        <br>
+
+        I love doing anything software related.
+        <br>
+        <br>
+
+        Here are some links you may enjoy :)
+        <br>
+        <br>
+
+        <a>Resume</a>
+        <br>
+        <a>Projects</a>
+        <br>
+        <a>LinkedIn</a>
+
+        <br>
+        <br>
+
+        Keep it chill.
+        <br>
+      </div>
+    </div>
+  </div>
+  <div class="town-container">
+    <div class="houses-container">
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-one.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-one.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-four.svg"></img>
+
+    </div>
+    <div class="wave-container">
+      <img src="/images/boat.svg" class="boat"></img>
+    </div>
+  </div>
+  <script>
+    /*
+    window.onload = function() {
+      const numberOfFlakes = 150;
+      // var fragment = document.createDocumentFragment();j
+      var fragment = document.getElementsByClassName("sky-container")[0];
+      const precision = 0.1;
+      for (var i = 0; i < numberOfFlakes; i++) {
+        var dot = document.createElement("div");
+        var x = Math.floor(Math.random() * 100);
+        var y = Math.floor(Math.random() * 100);
+        var reverse = Math.random() < 0.5;
+
+        dot.setAttribute("class", `snow`);
+        // dot.style.animationDelay = Math.floor(Math.random() * maxDelay * (1 / precision)) / (1 / precision) + "s";
+        // var minCircleDurationTime = 4;
+        // var maxCircleDurationTime = 7;
+        // dot.style.animationDuration = Math.floor(Math.random() * (maxCircleDurationTime - minCircleDurationTime) * (1 / precision)) / (1 / precision) + minCircleDurationTime + "s"; + minCircleDurationTime + "s";
+        dot.style.left = x + "%";
+        dot.style.top = y + "%";
+        dot.style.width = Math.floor(Math.random() * 0.3 * (1 / precision)) / (1 / precision) + 0.3 + "em";
+        dot.style.height = dot.style.width;
+
+        console.log(dot);
+        fragment.appendChild(dot);
+      }
+
+      document.body.appendChild(fragment);
+    }
+   */
+  </script>
 </body>
