Modified boat, new link animation

--- a/app/newfoundland.html
+++ b/app/newfoundland.html
@@ -7,32 +7,30 @@
   <div class="sky-container">
     <div class="main-content">
       <div class="text-container">
-        Hello Visitor,
-        <br>
-        <br>
-        My name is Luke.
-        <br>
-        <br>
+        <div class="description-container">
+          <div>
+            Hello visitor,
+            <br>
+            <br>
+            My name is Luke.
+            <br>
+            <br>
 
-        I love doing anything software related.
-        <br>
-        <br>
+            I love doing anything software related.
+            <br>
+            <br>
 
-        Here are some links you may enjoy :)
-        <br>
-        <br>
-
-        <a>Resume</a>
-        <br>
-        <a>Projects</a>
-        <br>
-        <a>LinkedIn</a>
-
-        <br>
-        <br>
-
-        Keep it chill.
-        <br>
+            Here are some links you may enjoy :)
+            <br>
+            <br>
+          </div>
+        </div>
+          <div class="link-container">
+            <hr>
+            <br>
+            <span><a href="">Resume</a> * <a href="">Projects</a> * <a href="">LinkedIn</a></span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
