Starter changes to make it mobile responsive, new boat animation

--- a/app/newfoundland.html
+++ b/app/newfoundland.html
@@ -1,6 +1,7 @@
 <head>
-  <title>Newfoundland</title>
+  <title>newfoundland</title>
   <link rel="stylesheet" href="css/newfoundland.css" />
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
 <body>
@@ -14,23 +15,25 @@
             Hello visitor,
             <br>
             <br>
-            My name is Luke.
+            My name is <span class="name">Luke</span>.
             <br>
             <br>
 
-            I love doing anything software related.
+            I love doing anything <br class="extra-break"> software related.
             <br>
             <br>
 
-            Here are some links you may enjoy :)
+            Here are some links <br class="extra-break"> you may enjoy :)
             <br>
             <br>
           </div>
         </div>
           <div class="link-container">
-            <hr>
-            <br>
-            <span><a href="">Resume</a> * <a href="">Projects</a> * <a href="">LinkedIn</a></span>
+            <div>
+              <hr>
+              <br>
+              <span><hr class="link-sep"><a href="">Resume</a><br class="extra-break"><hr class="link-sep"><div class="link-sep-non-mobile"></div> <a href="">Projects</a><br class="extra-break"><hr class="link-sep"><div class="link-sep-non-mobile"></div><a href="">LinkedIn</a><hr class="link-sep"></span>
+            </div>
           </div>
         </div>
       </div>
@@ -65,7 +68,7 @@
 
     </div>
     <div class="wave-container">
-      <img src="/images/boat.svg" class="boat"></img>
+      <div class="boat"></div>
     </div>
   </div>
   <script>
