Working mobile version

--- a/app/newfoundland.html
+++ b/app/newfoundland.html
@@ -15,7 +15,7 @@
             Hello visitor,
             <br>
             <br>
-            My name is <span class="name">Luke</span>.
+            My name is Luke.
             <br>
             <br>
 
