The resizing on the houses is much much better, using heights now

--- a/app/newfoundland.html
+++ b/app/newfoundland.html
@@ -32,7 +32,7 @@
             <div>
               <hr>
               <br>
-              <span><hr class="link-sep"><a href="">Resume</a><br class="extra-break"><hr class="link-sep"><div class="link-sep-non-mobile"></div> <a href="">Projects</a><br class="extra-break"><hr class="link-sep"><div class="link-sep-non-mobile"></div><a href="">LinkedIn</a><hr class="link-sep"></span>
+              <span><hr class="link-sep"><a href="">Resume</a><br class="extra-break"><hr class="link-sep"><p class="link-sep-non-mobile"> * </p> <a href="">Projects</a><br class="extra-break"><hr class="link-sep"><p class="link-sep-non-mobile"> * </p><a href="">LinkedIn</a><hr class="link-sep"></span>
             </div>
           </div>
         </div>
@@ -71,35 +71,4 @@
       <div class="boat"></div>
     </div>
   </div>
-  <script>
-    /*
-    window.onload = function() {
-      const numberOfFlakes = 150;
-      // var fragment = document.createDocumentFragment();j
-      var fragment = document.getElementsByClassName("sky-container")[0];
-      const precision = 0.1;
-      for (var i = 0; i < numberOfFlakes; i++) {
-        var dot = document.createElement("div");
-        var x = Math.floor(Math.random() * 100);
-        var y = Math.floor(Math.random() * 100);
-        var reverse = Math.random() < 0.5;
-
-        dot.setAttribute("class", `snow`);
-        // dot.style.animationDelay = Math.floor(Math.random() * maxDelay * (1 / precision)) / (1 / precision) + "s";
-        // var minCircleDurationTime = 4;
-        // var maxCircleDurationTime = 7;
-        // dot.style.animationDuration = Math.floor(Math.random() * (maxCircleDurationTime - minCircleDurationTime) * (1 / precision)) / (1 / precision) + minCircleDurationTime + "s"; + minCircleDurationTime + "s";
-        dot.style.left = x + "%";
-        dot.style.top = y + "%";
-        dot.style.width = Math.floor(Math.random() * 0.3 * (1 / precision)) / (1 / precision) + 0.3 + "em";
-        dot.style.height = dot.style.width;
-
-        console.log(dot);
-        fragment.appendChild(dot);
-      }
-
-      document.body.appendChild(fragment);
-    }
-   */
-  </script>
 </body>
