--- a/app/newfoundland.html
+++ b/app/newfoundland.html
@@ -32,7 +32,19 @@
             <div>
               <hr>
               <br>
-              <span><hr class="link-sep"><a href="">Resume</a><br class="extra-break"><hr class="link-sep"><p class="link-sep-non-mobile"> * </p> <a href="">Projects</a><br class="extra-break"><hr class="link-sep"><p class="link-sep-non-mobile"> * </p><a href="">LinkedIn</a><hr class="link-sep"></span>
+              <span>
+                <hr class="link-sep">
+                <a href="">Resume</a>
+                <br class="extra-break">
+                <hr class="link-sep">
+                <p class="link-sep-non-mobile"> * </p>
+                <a href="">Projects</a>
+                <br class="extra-break">
+                <hr class="link-sep">
+                <p class="link-sep-non-mobile"> * </p>
+                <a href="">LinkedIn</a>
+                <hr class="link-sep">
+              </span>
             </div>
           </div>
         </div>
@@ -65,7 +77,20 @@
       <img src="/images/house-two.svg"></img>
       <img src="/images/house-four.svg"></img>
       <img src="/images/house-four.svg"></img>
-
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-three.svg"></img>
+      <img src="/images/house-two.svg"></img>
+      <img src="/images/house-four.svg"></img>
     </div>
     <div class="wave-container">
       <div class="boat"></div>
