Removed old files and renamed files

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <head>
-  <title>newfoundland</title>
-  <link rel="stylesheet" href="css/newfoundland.css" />
+  <title>Luke Halasy | Portfolio</title>
+  <link rel="stylesheet" href="css/style.css" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
