--- a/app/index.html
+++ b/app/index.html
@@ -38,15 +38,15 @@
               <br>
               <span>
                 <hr class="link-sep">
-                <a href="">Resume</a>
+                <a href="/resume.pdf">Resume</a>
                 <br class="extra-break">
                 <hr class="link-sep">
                 <p class="link-sep-non-mobile"> * </p>
-                <a href="">Projects</a>
+                <a href="https://github.com/LukeHalasy">Projects</a>
                 <br class="extra-break">
                 <hr class="link-sep">
                 <p class="link-sep-non-mobile"> * </p>
-                <a href="">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/luke-halasy">LinkedIn</a>
                 <hr class="link-sep">
               </span>
             </div>
@@ -57,44 +57,44 @@
   </div>
   <div class="town-container">
     <div class="houses-container">
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-one.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-one.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-three.svg"></img>
-      <img src="/images/house-two.svg"></img>
-      <img src="/images/house-four.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-one.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-one.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-three.svg"></img>
+      <img src="images/house-two.svg"></img>
+      <img src="images/house-four.svg"></img>
     </div>
     <div class="wave-container">
       <div class="boat"></div>
