--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Luke Halasy | Portfolio</title>
+  <title>Luke Halasy</title>
+
+  <meta charset="utf-8">
+  <meta name="Description" content="Luke Halasy  |  Resume * Projects * LinkedIn">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/style.css">
   <!--endbuild-->
-
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-</head>
-
+  </head>
 <body>
   <div class="sky-container">
     <div class="main-content">
@@ -57,47 +62,48 @@
   </div>
   <div class="town-container">
     <div class="houses-container">
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-one.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-one.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-three.svg"></img>
-      <img src="images/house-two.svg"></img>
-      <img src="images/house-four.svg"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-one.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-one.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-three.svg" alt="house"></img>
+      <img src="images/house-two.svg" alt="house"></img>
+      <img src="images/house-four.svg" alt="house"></img>
     </div>
     <div class="wave-container">
       <div class="boat"></div>
     </div>
   </div>
 </body>
+</html>
